Rotation Chooses Wrong Axis #93290

Closed
opened 2021-11-22 13:58:46 +01:00 by Chris Malcheski · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96

Blender Version
Broken: version: 2.93.7 Release Candidate, branch: master, commit date: 2021-11-20 16:51, hash: 0b89b94947
Worked: (newest version of Blender that worked as expected)

Short description of error

Rotation occurs along the wrong axis.

Exact steps for others to reproduce the error

Open attached file. Type

ER2

Rotation occurs along Y axis. View is along negative Z, top-down.

Type

ERZ2

Same thing. Rotation along Y axis.

Type

ERZZ2

Works. Rotation occurs along the Z axis.

bug_99.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96 **Blender Version** Broken: version: 2.93.7 Release Candidate, branch: master, commit date: 2021-11-20 16:51, hash: `0b89b94947` Worked: (newest version of Blender that worked as expected) **Short description of error** Rotation occurs along the wrong axis. **Exact steps for others to reproduce the error** Open attached file. Type ER2 Rotation occurs along Y axis. View is along negative Z, top-down. Type ERZ2 Same thing. Rotation along Y axis. Type ERZZ2 Works. Rotation occurs along the Z axis. [bug_99.blend](https://archive.blender.org/developer/F11843744/bug_99.blend)

Added subscriber: @CMalcheski

Added subscriber: @CMalcheski

Added subscribers: @mano-wii, @iss

Added subscribers: @mano-wii, @iss

I am not quite sure how this mode switching is supposed to work, I assume, this is caused by extrude prefering direction along normal.
So E R would rotate along normal, which is expected.
E R Z seems to only disable normal alignment but rotation is still aligned. This looks incorrect, but perhaps desirable.
E R Z Z will ther realign this time with global Z axis.

@mano-wii Do you think this works as it should?

I am not quite sure how this mode switching is supposed to work, I assume, this is caused by extrude prefering direction along normal. So E R would rotate along normal, which is expected. E R Z seems to only disable normal alignment but rotation is still aligned. This looks incorrect, but perhaps desirable. E R Z Z will ther realign this time with global Z axis. @mano-wii Do you think this works as it should?

When you use X, Y, or Z in a rotation operation, it specifies the global axis. XX, YY, or ZZ moves to the local object axis. Since I began using Blender, back around the year 1842, using R without specifying an axis has always rotated an object along the view axis. Specifying X, Y, or Z rotates it along the specified global axes, and XX, YY, or ZZ uses the local object axis depending on what the object's rotation is set to (i.e. with Ctrl+A). Normals have never come into play, especially in edit mode. Which I failed to specify (that I was in edit mode) but extrude only works in edit mode to begin with.

When you use X, Y, or Z in a rotation operation, it specifies the global axis. XX, YY, or ZZ moves to the local object axis. Since I began using Blender, back around the year 1842, using R without specifying an axis has always rotated an object along the view axis. Specifying X, Y, or Z rotates it along the specified global axes, and XX, YY, or ZZ uses the local object axis depending on what the object's rotation is set to (i.e. with Ctrl+A). Normals have never come into play, especially in edit mode. Which I failed to specify (that I was in edit mode) but extrude only works in edit mode to begin with.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

When pressing {key Z} after {key E R} the constraining is disabled, the orientation should be viewport instead of normal, so in fact it is incorrect.

When pressing {key Z} after {key E R} the constraining is disabled, the orientation should be viewport instead of normal, so in fact it is incorrect.

This issue was referenced by 5e2dc507e7

This issue was referenced by 5e2dc507e7e6d5ae2332091cf82661a2bbd8440a

This issue was referenced by 12a83db83c

This issue was referenced by 12a83db83c5e23f5d0dccd420fa875a736a7b10f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-11-26 14:50:15 +01:00

Blender developers are the most awesome devs on Earth. It goes without saying. THE BEST.

Blender developers are the most awesome devs on Earth. It goes without saying. THE BEST.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93290
No description provided.